# speech-embeddings-gan

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: cycle_gan.py  data.py  embeddings.py  trainer.py
tests/: test_embeddings.py
