[tool.poetry]
name = "speech-embeddings-gan"
version = "0.1.0"
description = ""
authors = ["Philipp <phil.guldimann@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.42.3"
librosa = "^0.10.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
